--- a/about.html
+++ b/about.html
@@ -344,8 +344,7 @@
             stagger: .7,
             ease: Power4.easeOut,
         }, "-=2.5")
-
-        gsap.from('.hero .caption .img', {
+        gsap.from('.img', {
             opacity: 0,
             y: -50,
             duration: 2,
