--- a/event.html
+++ b/event.html
@@ -16,9 +16,6 @@
     <link rel="stylesheet" href="css/event/event.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js"></script>
-
     <script src="js/script.js" defer></script>
     <script src="js/event.js" defer></script>
 
@@ -133,7 +130,10 @@
 
                         <div class="boxUrutkan">
                             <span>Terbaru</span>
-                            <i class="fas fa-angle-down"></i>
+                            <svg class="fa" viewBox="0 0 320 512">
+                                <path
+                                    d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                            </svg>
 
                             <div class="isiBoxUrutkan">
                                 <span>Terbaru</span>
@@ -152,7 +152,10 @@
 
                                 <div class="keterangan">
                                     <span>jenis</span>
-                                    <i class="fas fa-angle-down"></i>
+                                    <svg class="fa" viewBox="0 0 320 512">
+                                        <path
+                                            d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                                    </svg>
                                 </div>
 
                                 <div class="isiFilterProgram">
@@ -186,7 +189,10 @@
 
                                 <div class="keterangan">
                                     <span>Perusahaan</span>
-                                    <i class="fas fa-angle-down"></i>
+                                    <svg class="fa" viewBox="0 0 320 512">
+                                        <path
+                                            d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                                    </svg>
                                 </div>
 
                                 <div class="isiFilterProgram hideIsiFilterProgram">
@@ -207,7 +213,10 @@
 
                                 <div class="keterangan">
                                     <span>Universitas</span>
-                                    <i class="fas fa-angle-down"></i>
+                                    <svg class="fa" viewBox="0 0 320 512">
+                                        <path
+                                            d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                                    </svg>
                                 </div>
 
                                 <div class="isiFilterProgram hideIsiFilterProgram">
@@ -247,7 +256,10 @@
 
                         <div class="filter">
                             <div class="icon">
-                                <i class="fas fa-filter"></i>
+                                <svg class="fa" viewBox="0 0 512 512">
+                                    <path
+                                        d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z" />
+                                </svg>
                             </div>
                             <h2>Filter</h2>
                         </div>
@@ -255,7 +267,10 @@
                         <div class="urutkan">
                             <h2>Terbaru</h2>
                             <div class="icon">
-                                <i class="fas fa-angle-down"></i>
+                                <svg class="fa" viewBox="0 0 320 512">
+                                    <path
+                                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                                </svg>
                             </div>
 
                             <div class="isiBoxUrutkan">
@@ -507,14 +522,20 @@
 
                 <div class="title">
                     <div class="icon">
-                        <i class="fas fa-filter"></i>
+                        <svg class="fa" viewBox="0 0 512 512">
+                            <path
+                                d="M487.976 0H24.028C2.71 0-8.047 25.866 7.058 40.971L192 225.941V432c0 7.831 3.821 15.17 10.237 19.662l80 55.98C298.02 518.69 320 507.493 320 487.98V225.941l184.947-184.97C520.021 25.896 509.338 0 487.976 0z" />
+                        </svg>
                     </div>
 
                     <h2>Filter</h2>
                 </div>
 
                 <div class="icon close">
-                    <i class="fas fa-times"></i>
+                    <svg class="fa" viewBox="0 0 352 512">
+                        <path
+                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z" />
+                    </svg>
                 </div>
             </div>
             <div class="modal-body">
@@ -523,7 +544,10 @@
 
                     <div class="keterangan">
                         <span>jenis</span>
-                        <i class="fas fa-angle-down"></i>
+                        <svg class="fa" viewBox="0 0 320 512">
+                            <path
+                                d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                        </svg>
                     </div>
 
                     <div class="isiFilterProgram">
@@ -557,7 +581,10 @@
 
                     <div class="keterangan">
                         <span>Perusahaan</span>
-                        <i class="fas fa-angle-down"></i>
+                        <svg class="fa" viewBox="0 0 320 512">
+                            <path
+                                d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                        </svg>
                     </div>
 
                     <div class="isiFilterProgram hideIsiFilterProgram">
@@ -578,7 +605,10 @@
 
                     <div class="keterangan">
                         <span>Universitas</span>
-                        <i class="fas fa-angle-down"></i>
+                        <svg class="fa" viewBox="0 0 320 512">
+                            <path
+                                d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                        </svg>
                     </div>
 
                     <div class="isiFilterProgram hideIsiFilterProgram">
