--- a/faq.html
+++ b/faq.html
@@ -15,8 +15,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js"></script>
 
     <script src="js/script.js" defer></script>
     <script src="js/faq.js" defer></script>
@@ -77,8 +75,10 @@
                             <p>Yang ngajar siapa ?</p>
 
                             <div class="icon">
-                                <i class="fas fa-angle-down"></i>
-                            </div>
+                                <svg class="fa" viewBox="0 0 320 512">
+                                    <path
+                                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                                </svg> </div>
                         </div>
 
                         <div class="jawaban">
@@ -93,7 +93,10 @@
                         <div class="pertanyaan">
                             <p>Apakah semuanya gratis ?</p>
                             <div class="icon">
-                                <i class="fas fa-angle-down"></i>
+                                <svg class="fa" viewBox="0 0 320 512">
+                                    <path
+                                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                                </svg>
                             </div>
                         </div>
 
@@ -109,7 +112,10 @@
                         <div class="pertanyaan">
                             <p>Bagaimana cara saya mengapresiasinya ?</p>
                             <div class="icon">
-                                <i class="fas fa-angle-down"></i>
+                                <svg class="fa" viewBox="0 0 320 512">
+                                    <path
+                                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                                </svg>
                             </div>
                         </div>
 
@@ -123,7 +129,10 @@
                         <div class="pertanyaan">
                             <p>Ada sosial media ?</p>
                             <div class="icon">
-                                <i class="fas fa-angle-down"></i>
+                                <svg class="fa" viewBox="0 0 320 512">
+                                    <path
+                                        d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z" />
+                                </svg>
                             </div>
                         </div>
 
