--- a/profil.html
+++ b/profil.html
@@ -15,8 +15,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive/responsive.css">
 
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <script src="fontawesome/js/all.min.js"></script>
 
     <script src="js/script.js" defer></script>
 
@@ -70,7 +68,11 @@
                 <div class="profil-orang">
 
                     <a href="profil.html" rel="nofollow noopener" title="Ubah Profil" class="icon">
-                        <i class="fas fa-pen"></i>
+                        <svg class="fa" viewBox="0 0 512 512">
+                            <path
+                                d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z" />
+                        </svg>
+                        <!-- <i class="fas fa-pen"></i> -->
                     </a>
 
                     <div class="detail-orang">
