--- a/detailEvent.html
+++ b/detailEvent.html
@@ -81,7 +81,7 @@
                 </div>
 
                 <!-- <div class="img"></div> -->
-                <img src="img/kelas/Skilvul asset volume 2-03.jpg" alt="img kelas">
+                <img src="img/kelas/belajar-laravel-8-dari-awal-ign7z.jpg" alt="img kelas">
             </div>
         </section>
 
