--- a/faq.html
+++ b/faq.html
@@ -72,7 +72,7 @@
                 <div class="FAQ pageFAQ">
                     <div class="perFAQ">
                         <div class="pertanyaan">
-                            <p>Yang ngajar siapa ?</p>
+                            <p>Apa itu HMJ MI?</p>
 
                             <div class="icon">
                                 <svg class="fa" viewBox="0 0 320 512">
@@ -82,16 +82,18 @@
                         </div>
 
                         <div class="jawaban">
-                            Untuk setiap series-nya tersendiri, kami mengambil dari Youtube semua. Tapi untuk
-                            konsultasi secara khusus, kami sediakan beberapa kakak kelas yang terbukti
-                            bepengalaman
-                            dibidangnya masing-masing
+                            HMJ MI merupakan sebuah organisasi kemahasiswaan di STMIK AKAKOM yang beranggotakan
+                            mahasiswa jurusan manajemen Informatika. HMJ MI bertujuan untuk menghimpun dan mewadahi
+                            mahasiswa jurusan Manajemen Informatika STMIK AKAKOM yang dalam menyalurkan aspirasi dan
+                            mengkoordinasikan kegiatan mahasiswa Manajemen Informatika serta menjaga nama baik almamater
+                            STMIK AKAKOM Yogyakarta. HMJ MI didirikan di STMIK AKAKOM Yogyakarta pada tanggal 10 Juli
+                            2005.
                         </div>
                     </div>
 
                     <div class="perFAQ">
                         <div class="pertanyaan">
-                            <p>Apakah semuanya gratis ?</p>
+                            <p>Apa visi & misi dari HMJ MI?</p>
                             <div class="icon">
                                 <svg class="fa" viewBox="0 0 320 512">
                                     <path
@@ -101,9 +103,44 @@
                         </div>
 
                         <div class="jawaban">
-                            Iya, semua yang ada disini <strong>GRATIS</strong> tidak dipungut biaya sepeserpun, tapi
-                            hanya dapat diakses oleh siswa
-                            jurusan RPL SMKN 2 Purbalingga
+                            <strong>Visi : </strong>
+                            "Menjadikan HMJ Manajemen Informatika sebagai organisasi yang komunikatif serta menjujung
+                            tinggi profesionalitas dan kekeluargaan"<br><br>
+                            <strong>Misi : </strong><br>
+                            <ul>
+                                <li>
+                                    Berkontribusi sebagai wadah dan penyalur aspirasi non akademik (bakat minat) dan
+                                    potensi
+                                    akademik mahasiswa manajemen informatika di berbagai kegiatan. Baik kegiatan didalam
+                                    maupun
+                                    luar kampus.
+                                </li>
+
+                                <li>
+                                    Berperan dalam mempererat kekeluargaan antar sesama pengurus HMJ Manajemen
+                                    Informatika
+                                    maupun seluruh masyarakat manajemen informatika.
+                                </li>
+
+                                <li>
+                                    Mengembangkan jiwa profesionalitas dalam pelaksanaan kegiatan HMJ Manajemen
+                                    Informatika.
+                                </li>
+
+                                <li>
+                                    Mengoptimalkan fungsi-fungsional setiap Departemen dan Menyeleggarakan kegiatan yang
+                                    mendukung tercapainya Mahasiswa Manajemen Informatika yang aktif.
+                                </li>
+
+                                <li>
+                                    Menjalin hubungan yang baik dengan cara memperluas jaringan dengan civitas akademika
+                                    dan
+                                    organisasi atau lembaga lain, baik didalam maupun diluar Manajemen Informatika STMIK
+                                    AKAKOM
+                                    Yogyakarta.
+                                </li>
+                            </ul>
+
                         </div>
                     </div>
 
